Fix up inexplicable spacing changes when backstretch is enabled.

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -66,7 +66,7 @@
   &.uom-backstretch {
     #main-content,
     .col-2.rightside {
-      margin-top: 20px;
+      margin-top: 10px;
     }
     #slider {
       margin-top: 56px;
@@ -75,7 +75,7 @@
       }
     }
     #backstretch-wrapper {
-      top: 125px;
+      top: 175px;
     }
   }
 
